2005-02-01  Marcus Brinkmann  <marcus@gnu.org>

	* deva.h (deva_alloc): Renamed to device_alloc.
	(deva_class_init): Renamed to device_class_init and add new device
	type argument.
	(enum device_type): New enum.
	* deva.c (create_bootstrap_caps): Call device_alloc, not
	deva_alloc, and pass device type argument.
	(main): Call device_class_init, not deva_class_init.
	* deva-class.c: Removed file.
	* device.h, device.c, device-console.c: New files.
	* Makefile.am (deva_SOURCES): Remove deva-class.c and add
	device.h, device.c, device-console.c.

2005-01-11  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (deva_SOURCES): Remove physmem-user.h and
	physmem-user.c.
	(deva_LDADD): Add ../libhurd-btree/libhurd-btree.a and
	../libhurd-mm/libhurd-mm.a.
	* ia32-cmain.c: Include <hurd/mm.h>.
	(pager_tid): New global variable.
	(cmain): Allocate a thread that the memory management subsystem
	can use as the pager thread.  Call hurd_mm_init.  Set the
	PAGER_TID as the current thread's pager.
	* mmap.c: Rewrite to use new interfaces.
	* physmem-user.h: Remove obsolete file.
	* physmem-user.c: Likewise.

2005-01-07  Neal H. Walfield  <neal@gnu.org>

	* output.h (debug): Preface __VA_ARGS__ with ## thereby making it
	optional.

2004-12-01  Neal H. Walfield  <neal@gnu.org>

	* physmem-user.h (physmem_map): Change CONT from a hurd_cap_id_t
	to a hurd_cap_handle_t.
	* physmem-user.c (physmem_map): Likewise.
	* task-user.h (task_thread_alloc): Change TASK from a
	hurd_cap_id_t to a hurd_cap_handle_t.
	* task-user.c (task_thread_alloc): Likewise.

2004-11-22  Neal H. Walfield  <neal@gnu.org>

	* deva.c (bootstrap_final): New function.
	(main): Call bootstrap_final as per the start up protocol to tell
	wortel that deva is up and running and that it should now start the
	root fs.

2004-11-17  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (bootdir): New variable.
	(boot_PROGRAMS): Use this instead of noinst_PROGRAMS.

2004-11-17  Neal H. Walfield  <neal@gnu.org>
